# ocamlcalc

./: .gitignore  .ocamlformat  Makefile  README.md  calculator.opam  dune-project
lib/: ast.mli  calculator.ml  dune  eval.ml  lexer.mll  parser.mly
test/: dune  test_ast.ml  test_calculator.ml  test_eval.ml  test_lexer.ml  test_parser.ml
